gcc/testsuite/rust/rustc/ui/parser/paamayim-nekudotayim.rs
// http://phpsadness.com/sad/1

fn main() {
    ::; // { dg-error "" "" { target *-*-* } }
}

